@@ -130,6 +130,11 @@ public class ColumnFamilyMetrics
     /** CAS Commit metrics */
     public final LatencyMetrics casCommit;
 
+    /** Number of started repairs as coordinator on this table */
+    public final Counter repairsStarted;
+    /** Number of completed repairs as coordinator on this table */
+    public final Counter repairsCompleted;
+
     public final Timer coordinatorReadLatency;
     public final Timer coordinatorScanLatency;
 
@@ -617,6 +622,9 @@ public class ColumnFamilyMetrics
         casPrepare = new LatencyMetrics(factory, "CasPrepare", cfs.keyspace.metric.casPrepare);
         casPropose = new LatencyMetrics(factory, "CasPropose", cfs.keyspace.metric.casPropose);
         casCommit = new LatencyMetrics(factory, "CasCommit", cfs.keyspace.metric.casCommit);
+
+        repairsStarted = createColumnFamilyCounter("RepairsStarted");
+        repairsCompleted = createColumnFamilyCounter("RepairsCompleted");
     }
 
     public void updateSSTableIterated(int count)
